--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/normalize.css" />
     <link rel="stylesheet" href="./styles/profile/profile.css" />
 
-    <title>ok man</title>
+    <title>فرم درخواست مرخصی</title>
     <!-- <link rel="icon" href="./file/logo/logo.png" /> -->
     <!-- <link
       rel="stylesheet"
