--- a/accept.html
+++ b/accept.html
@@ -39,42 +39,44 @@
       </div>
     </div>
     <script>
-      const inputs = document.querySelectorAll('.accept-main-input-item');
-const showCode = document.querySelector('.accept-show-code');
-const submitButton = document.querySelector('.accept-btn-item');
-window.addEventListener('DOMContentLoaded', () => {
-  inputs[0].focus();
-});
-inputs.forEach((input, index) => { 
-  input.addEventListener('input', (e) => {
-    if (e.target.value.length > 1) {
-      e.target.value = e.target.value.slice(0, 1);
-    }
-    if (e.target.value.length > 0 && index < inputs.length - 1) {
-      inputs[index + 1].focus();
-    }
-  });
-  input.addEventListener('keydown', (e) => {
-    if (e.key === 'Backspace' && e.target.value === '' && index > 0) {
-      inputs[index - 1].focus();
-    }
-  });
-});
-submitButton.addEventListener('click', submitCode);
-document.addEventListener('keydown', (e) => {
-  if (e.key === 'Enter') {
-    const allFilled = Array.from(inputs).every((input) => input.value.trim() !== '');
-    if (allFilled) {
-      submitCode();
-    }
-  }
-});
-function submitCode() {
-  const code = Array.from(inputs)
-    .map((input) => input.value)
-    .join('');
-  showCode.textContent = code || 'number';
-}
+      const inputs = document.querySelectorAll(".accept-main-input-item");
+      const showCode = document.querySelector(".accept-show-code");
+      const submitButton = document.querySelector(".accept-btn-item");
+      window.addEventListener("DOMContentLoaded", () => {
+        inputs[0].focus();
+      });
+      inputs.forEach((input, index) => {
+        input.addEventListener("input", (e) => {
+          if (e.target.value.length > 1) {
+            e.target.value = e.target.value.slice(0, 1);
+          }
+          if (e.target.value.length > 0 && index < inputs.length - 1) {
+            inputs[index + 1].focus();
+          }
+        });
+        input.addEventListener("keydown", (e) => {
+          if (e.key === "Backspace" && e.target.value === "" && index > 0) {
+            inputs[index - 1].focus();
+          }
+        });
+      });
+      submitButton.addEventListener("click", submitCode);
+      document.addEventListener("keydown", (e) => {
+        if (e.key === "Enter") {
+          const allFilled = Array.from(inputs).every(
+            (input) => input.value.trim() !== ""
+          );
+          if (allFilled) {
+            submitCode();
+          }
+        }
+      });
+      function submitCode() {
+        const code = Array.from(inputs)
+          .map((input) => input.value)
+          .join("");
+        showCode.textContent = code || "number";
+      }
     </script>
   </body>
 </html>
